src/client/css/partials/floatingBanner.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

.floating-banner {
  align-items: center;
  background: var(--background-gradient);
  bottom: 0;
  color: #fff;
  box-shadow: 0 -6px 6px -8px #000;
  gap: var(--padding-md);
  justify-content: center;
  font-size: 0.875rem;
  left: 0;
  padding: var(--padding-sm) 10vw;
  position: sticky;
  width: 100%;

  /* Prevent banner being overlapped by the sidebar
  that is shown for authenticated users. */
  z-index: 1;
}

.floating-banner:focus {
  outline: none;
}

.floating-banner:not([hidden]) {
  display: flex;
}

.floating-banner-image {
  max-height: 3.75rem;
}

.floating-banner-content {
  flex: 1 1 0;
  margin: 0;
  max-width: calc(var(--max-width-p) * 0.5);
  padding-right: var(--padding-sm);
}

.floating-banner-buttons {
  display: flex;
  gap: var(--padding-sm);
}

.floating-banner-buttons > button.secondary {
  border: none;
  color: #fff;
}

.floating-banner-buttons > button.secondary:hover {
  background: rgb(255 255 255 / 0.15);
  color: #fff;
}

.floating-banner-buttons > button:focus,
.floating-banner-buttons > .button:focus {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

@media (width <= 600px) {
  .floating-banner {
    padding: var(--padding-sm) 10vw var(--padding-sm) 2.5vw;
  }

  .floating-banner-buttons {
    flex-direction: column;
  }
}

